# nbv_3d_cnn_missing_depth

./: README.md
nbv_3d_cnn_evaluate_view/: CMakeLists.txt  package.xml
nbv_3d_cnn_evaluate_view/cmake/: evaluate_view_opencl.cmake
nbv_3d_cnn_evaluate_view/scripts/: nbv_3d_cnn_predict.py
nbv_3d_cnn_evaluate_view/src/: autocomplete_predict.cpp  autocomplete_predict.h  evaluate_view.cpp  evaluate_view.h  evaluate_view_filter.cpp  evaluate_view_filter.h  evaluate_view_opencl.cl  evaluate_view_opencl.cl.h  evaluate_view_opencl.cpp  evaluate_view_opencl.h  evaluate_view_opencl_parameters.h  evaluate_view_test.cpp  evaluate_view_test.h  image_predict.cpp  image_predict.h  opencl_cpp_common.h  projection_image_predict.cpp  projection_image_predict.h
nbv_3d_cnn_evaluate_view_msgs/: CMakeLists.txt  package.xml
nbv_3d_cnn_evaluate_view_msgs/action/: EvaluateView.action  GenerateFilterCircleRectangleMask.action  GroundTruthEvaluateView.action  RawProjection.action  SetEnvironment.action
nbv_3d_cnn_real_image/: CMakeLists.txt  package.xml
nbv_3d_cnn_real_image/launch/: cnn_real_image_autocomplete_train.launch  cnn_real_image_eval_gain.launch  cnn_real_image_evaluate.launch  cnn_real_image_model_train.launch  cnn_real_image_projection_predict.launch  cnn_real_image_projection_train.launch  generate_partial_environments.launch  generate_virtual_views.launch
nbv_3d_cnn_real_image/scripts/: cnn_projection.py  cnn_real_image_autocomplete_train.py  cnn_real_image_model.py  cnn_real_image_model_train.py  cnn_real_image_predict.py  cnn_real_image_projection_model.py  cnn_real_image_projection_predict.py  cnn_real_image_projection_train.py  image_and_scene_3d_dataset.py  image_dataset.py  scene_3d_dataset.py
nbv_3d_cnn_real_image/src/: cnn_real_image_eval_gain.cpp  cnn_real_image_eval_gain.h  cnn_real_image_evaluate.cpp  cnn_real_image_evaluate.h  cnn_real_image_projection.cpp  cnn_real_image_projection.h  generate_partial_environments.cpp  generate_partial_environments.h  generate_virtual_views.cpp  generate_virtual_views.h
nbv_3d_cnn_real_image_msgs/: CMakeLists.txt  package.xml
nbv_3d_cnn_real_image_msgs/action/: ImagePredict.action  ProjectionPredict.action
render_robot_urdf/: CMakeLists.txt  package.xml
render_robot_urdf/data/urdf/: comau_nolimits_nobase_chull.urdf
render_robot_urdf/launch/: test.launch
render_robot_urdf/meshes/stl/convex_hull/: axes_1.stl  axes_2.stl  axes_3.stl  axes_4.stl  axes_5.stl  axes_6.stl  base.stl
render_robot_urdf/src/: render_robot_urdf.cpp  render_robot_urdf.h  render_robot_urdf_node.cpp  render_robot_urdf_test.cpp  urdf_filter.cpp  urdf_filter.h  urdf_renderer.cpp  urdf_renderer.h
render_robot_urdf/src/shaders/: surfel_fragment_shader_robot.cpp  surfel_fragment_shader_robot.h
render_robot_urdf/srv/: RenderRobotUrdf.srv
