<?xml version="1.0"?>
<package format="2">
  <name>nbv_3d_cnn_real_image</name>
  <version>0.0.0</version>
  <description>The nbv_3d_cnn_real_image package</description>

  <maintainer email="rimlab@todo.todo">rimlab</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>nbv_3d_cnn_real_image_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>nbv_3d_cnn_real_image_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>nbv_3d_cnn_real_image_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <depend>rmonica_voxelgrid_common</depend>
  <depend>nbv_3d_cnn_evaluate_view_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>message_serialization</depend>

  <export>
    
  </export>
</package>
