<?xml version="1.0"?>
<package format="2">
  <name>render_robot_urdf</name>
  <version>0.0.0</version>
  <description>The render_robot_urdf package</description>

  <maintainer email="rimlab@todo.todo">rimlab</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>moveit</build_export_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>urdf</exec_depend>
  <depend>init_fake_opengl_context</depend>
  <depend>eigen_conversions</depend>
  <depend>tf</depend>
  <depend>resource_retriever</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>cv_bridge</depend>

  <export>

  </export>
</package>
